Settings: Users: Provide correct email in API

We use the email address when removing a user so need to provide
'email' in addtion to the display email.

BUG=722245
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:closure_compilation

Review-Url: https://codereview.chromium.org/2888183002
Cr-Commit-Position: refs/heads/master@{#473673}

Former-commit-id: fcd808c7150d3d797b70ace4a7d1231a13301437