chrome/browser/resources/settings/people_page/user_list.js
@@ -118,6 +118,6 @@ Polymer({
    * @private
    */
   shouldShowEmail_: function(user) {
-    return !user.isSupervised && user.name != user.email;
+    return !user.isSupervised && user.name != user.displayEmail;
   },
 });
