third_party/closure_compiler/externs/users_private.js
@@ -20,6 +20,7 @@ chrome.usersPrivate = {};
 /**
  * @typedef {{
  *   email: string,
+ *   displayEmail: string,
  *   name: string,
  *   isOwner: boolean,
  *   isSupervised: boolean
